stoat/src/test/snapshots/stoat__test__app__tests__after-i.snap
---
source: stoat/src/test/app.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=insert
  1:|hello world
