stoat/src/test/snapshots/stoat__test__app__tests__after-second-esc.snap
---
source: stoat/src/test/app.rs
expression: app.snapshot_active()
---
[claude] pane=1 mode=normal focus=main
input: "hello|"
---
