stoat/src/test/snapshots/stoat__test__app__tests__editor-typing.snap
---
source: stoat/src/test/app.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:world|original
