stoat/src/test/snapshots/stoat__test__app__tests__palette-open.snap
---
source: stoat/src/test/app.rs
expression: app.snapshot_active()
---
[claude] pane=1 mode=command_palette focus=main ctx=CommandPalette
input: "|"
> AboutModalDismiss
  BufferFinderDismiss
  BufferFinderNext
  BufferFinderPrev
  BufferFinderSelect
  CommandPaletteDismiss
  CommandPaletteExecute
  CommandPaletteNext
  CommandPalettePrev
  DeleteLeft
  DeleteLine
  DeleteRight
  DeleteToEndOfLine
  DeleteWordLeft
  DeleteWordRight
  DiffReviewApproveHunk
  DiffReviewCycleComparisonMode
  DiffReviewDismiss
  DiffReviewNextHunk
  DiffReviewNextUnreviewedHunk
  DiffReviewPrevHunk
  DiffReviewResetProgress
  DiffReviewRevertHunk
  DiffReviewToggleApproval
  DiffReviewToggleFollow
  EnterGitFilterMode
  EnterInsertMode
  EnterNormalMode
  EnterPaneMode
  EnterSpaceMode
  EnterVisualMode
  FileFinderDismiss
  FileFinderNext
  FileFinderPrev
  FileFinderSelect
  FocusPaneDown
  FocusPaneLeft
  FocusPaneRight
  FocusPaneUp
  GitStageAll
  GitStageFile
  GitStageHunk
  GitStatusCycleFilter
  GitStatusDismiss
  GitStatusNext
  GitStatusPrev
  GitStatusSelect
  GitStatusSetFilterAll
  GitStatusSetFilterStaged
  GitStatusSetFilterUnstaged
  GitStatusSetFilterUnstagedWithUntracked
  GitStatusSetFilterUntracked
  GitToggleStageHunk
  GitToggleStageLine
  GitUnstageAll
  GitUnstageFile
  GitUnstageHunk
  GotoNextHunk
  GotoPrevHunk
  HelpModalDismiss
  MoveDown
  MoveLeft
  MoveNextLongWordStart
  MoveNextWordStart
  MovePrevLongWordStart
  MovePrevWordStart
  MoveRight
  MoveToFileEnd
  MoveToFileStart
  MoveToLineEnd
  MoveToLineStart
  MoveUp
  MoveWordLeft
  MoveWordRight
  NewLine
  OpenAboutModal
  OpenBufferFinder
  OpenClaudeChat
  OpenCommandPalette
  OpenDiffReview
  OpenFileFinder
  OpenGitStatus
  OpenHelpModal
  OpenHelpOverlay
  PageDown
  PageUp
  PrintWorkingDirectory
  Quit
  QuitAll
  SelectDown
  SelectLeft
  SelectRight
  SelectToLineEnd
  SelectToLineStart
  SelectUp
  ShowMinimapOnScroll
  SplitDown
  SplitLeft
  SplitRight
  SplitUp
  ToggleCommandPaletteHidden
  ToggleDiffHunk
  ToggleMinimap
  WriteAll
  WriteFile
