stoat/src/test/snapshots/stoat__test__app__tests__palette-typing.snap
---
source: stoat/src/test/app.rs
expression: app.snapshot_active()
---
[claude] pane=1 mode=command_palette focus=input ctx=CommandPalette
input: "test|"
> MoveNextLongWordStart
  MoveNextWordStart
  MovePrevLongWordStart
  MovePrevWordStart
  GitToggleStageHunk
  GitToggleStageLine
  GitStageHunk
  GitStatusNext
  GitStatusPrev
  MoveToFileStart
  MoveToLineStart
  SelectToLineStart
  GitStatusSetFilterStaged
  DiffReviewCycleComparisonMode
  GitStageAll
  SelectToLineEnd
  DiffReviewToggleApproval
  GitStageFile
  GitStatusSelect
  CommandPaletteExecute
  GitStatusSetFilterAll
  OpenGitStatus
  SplitLeft
  GitStatusSetFilterUnstaged
  GitStatusSetFilterUnstagedWithUntracked
  GitUnstageHunk
  GotoPrevHunk
  SelectDown
  SelectLeft
  SelectRight
  SelectUp
  GitStatusCycleFilter
  MoveToFileEnd
  MoveToLineEnd
  GitStatusSetFilterUntracked
  DeleteToEndOfLine
  DiffReviewResetProgress
  EnterInsertMode
  GitUnstageFile
  ToggleMinimap
  EnterSpaceMode
  GitUnstageAll
  CommandPalettePrev
  ToggleCommandPaletteHidden
  WriteAll
  EnterVisualMode
  DiffReviewRevertHunk
  Quit
  MoveLeft
  MoveWordLeft
  MoveRight
  MoveWordRight
  WriteFile
  CommandPaletteDismiss
